syntax = "proto3";

package chatbot;

// Chatbot service definition
service ChatbotService {
  // Send a chat message and get response
  rpc Chat(ChatRequest) returns (ChatResponse);
}

// Request message for chat
message ChatRequest {
  string message = 1;
  string conversation_id = 2;
}

// Response message for chat
message ChatResponse {
  string question = 1;
  string answer = 2;
  repeated string sources = 3;
  double processing_time = 4;
  bool success = 5;
  string error = 6;
}